package com.example.Spring_LevelTest;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class SpringLevelTestApplication {

    public static void main(String[] args) {
        SpringApplication.run(SpringLevelTestApplication.class, args);
    }
}